--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -302,3 +302,4 @@ color_scheme:
   - {name: Primary Overlay 1, color: 'rgba(30, 185, 128, 0.05)'}
   - {name: Primary Overlay 2, color: 'rgba(30, 185, 128, 0.08)'}
   - {name: Primary Overlay 3, color: 'rgba(30, 185, 128, 0.11)'}
+  - {name: '', color: '#000000'}
