--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -2,9 +2,95 @@ is_package: true
 container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
+  event_bindings: {show: form_show}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{}', visible: true}
   name: column_panel_1
   layout_properties: {slot: default}
-  components: []
+  components:
+  - name: card_1
+    properties: {role: card}
+    type: ColumnPanel
+    layout_properties: {grid_position: 'OAUZBN,CWHCWK'}
+    components:
+    - name: label_1
+      properties: {text: Fraud Detection in Banking Transactions Using Credit Card  Sign-Up Page,
+        bold: true}
+      type: Label
+      layout_properties: {grid_position: 'MEUBNC,WYVIZU'}
+  - name: Name
+    properties: {role: card}
+    type: ColumnPanel
+    layout_properties: {grid_position: 'HJYMLW,NTUYOA'}
+    components:
+    - name: label_2
+      properties: {text: 'Enter your name  : '}
+      type: Label
+      layout_properties: {grid_position: 'CZFJGW,LKNAPA AAZFOA,KYDLVY'}
+    - name: label_3
+      properties: {text: 'E-mail : '}
+      type: Label
+      layout_properties: {grid_position: 'CZFJGW,LKNAPA RZPHQI,BIPOKR'}
+    - name: text_area_1
+      properties: {spacing_above: small, height: 36, text: 'Enter your name
+
+          '}
+      type: TextArea
+      layout_properties: {grid_position: 'CZFJGW,FLGHDD'}
+    - name: text_area_1_copy
+      properties: {spacing_above: small, height: 36, text: 'E-mail
+
+          '}
+      type: TextArea
+      layout_properties: {grid_position: 'CZFJGW,FLGHDD HUUXBY,DHEBIH'}
+    - name: label_3_copy
+      properties: {text: 'Phone : '}
+      type: Label
+      layout_properties: {grid_position: 'EARSZD,LJXYQS YABVHD,MBYZYU'}
+    - name: label_3_copy_copy
+      properties: {text: 'Password : '}
+      type: Label
+      layout_properties: {grid_position: 'EARSZD,LJXYQS DPJILO,IXYJOC'}
+    - name: label_4
+      properties: {text: 'Enter you password again : '}
+      type: Label
+      layout_properties: {grid_position: 'EARSZD,LJXYQS YYAHLQ,QNEIOI'}
+    - name: text_area_1_copy_copy
+      properties: {spacing_above: small, height: 36, text: "Phone \n"}
+      type: TextArea
+      layout_properties: {grid_position: 'EARSZD,RGYTDX RBJAEA,JPHKRZ'}
+    - name: text_area_1_copy_2
+      properties: {spacing_above: small, height: 36, visible: false, text: "Password\
+          \ \n"}
+      type: TextArea
+      layout_properties: {grid_position: 'EARSZD,RGYTDX UCCKWI,TFCFCJ'}
+    - name: text_area_1_copy_copy_2
+      properties: {spacing_above: small, height: 36, visible: false, text: 'Re-enter
+          password '}
+      type: TextArea
+      layout_properties: {grid_position: 'EARSZD,RGYTDX ZPTIZH,XDQIXI'}
+    - name: link_1
+      properties: {text: Already a member. Login!, col_spacing: small, italic: true,
+        bold: true}
+      type: Link
+      layout_properties: {grid_position: 'EARSZD,RGYTDX VZGXCI,QOBMQI'}
+    - name: button_1
+      properties: {text: Sign up}
+      type: Button
+      layout_properties: {grid_position: 'IZZSUP,ZEKPCR'}
+      event_bindings: {click: button_1_click}
+- name: image_1
+  properties: {height: 86, source: _/theme/images%20(7).jpg, horizontal_align: center,
+    display_mode: zoom_to_fill}
+  type: Image
+  layout_properties: {slot: logo}
+- name: column_panel_2
+  properties: {}
+  type: ColumnPanel
+  layout_properties: {slot: left-nav}
+  components:
+  - name: label_5
+    properties: {text: Home}
+    type: Label
+    layout_properties: {grid_position: 'CYTLIO,VRMYDB'}
