--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -32,16 +32,14 @@ components:
       properties: {text: 'E-mail : '}
       type: Label
       layout_properties: {grid_position: 'CZFJGW,LKNAPA RZPHQI,BIPOKR'}
-    - name: text_area_1
+    - name: text
       properties: {spacing_above: small, height: 36, text: 'Enter your name
 
           '}
       type: TextArea
       layout_properties: {grid_position: 'CZFJGW,FLGHDD'}
     - name: text_area_1_copy
-      properties: {spacing_above: small, height: 36, text: 'E-mail
-
-          '}
+      properties: {spacing_above: small, height: 36, text: text2}
       type: TextArea
       layout_properties: {grid_position: 'CZFJGW,FLGHDD HUUXBY,DHEBIH'}
     - name: label_3_copy
@@ -56,18 +54,17 @@ components:
       properties: {text: 'Enter you password again : '}
       type: Label
       layout_properties: {grid_position: 'EARSZD,LJXYQS YYAHLQ,QNEIOI'}
-    - name: text_area_1_copy_copy
+    - name: text3
       properties: {spacing_above: small, height: 36, text: "Phone \n"}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX RBJAEA,JPHKRZ'}
-    - name: text_area_1_copy_2
+    - name: text4
       properties: {spacing_above: small, height: 36, visible: false, text: "Password\
           \ \n"}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX UCCKWI,TFCFCJ'}
     - name: text_area_1_copy_copy_2
-      properties: {spacing_above: small, height: 36, visible: false, text: 'Re-enter
-          password '}
+      properties: {spacing_above: small, height: 36, visible: false, text: text5}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX ZPTIZH,XDQIXI'}
     - name: link_1
