--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -38,7 +38,7 @@ components:
           '}
       type: TextArea
       layout_properties: {grid_position: 'CZFJGW,FLGHDD'}
-    - name: text_area_1_copy
+    - name: text2
       properties: {spacing_above: small, height: 36, text: text2}
       type: TextArea
       layout_properties: {grid_position: 'CZFJGW,FLGHDD HUUXBY,DHEBIH'}
@@ -63,7 +63,7 @@ components:
           \ \n"}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX UCCKWI,TFCFCJ'}
-    - name: text_area_1_copy_copy_2
+    - name: text5
       properties: {spacing_above: small, height: 36, visible: false, text: text5}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX ZPTIZH,XDQIXI'}
