Created Form2; Edited settings, ServerModule1 and Form1; Deleted Home

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,8 @@
 unique_ids:
   forms:
     Form1: V7UOIDW7J64RZBIZK7N6DRFJ4KNOD5C4
-  modules:
-    Home: '1702483430907345463958219.1579'
+    Form2: '1702569494606572780945875.5553'
+  modules: {}
   server_modules:
     ServerModule1: '1702483397188827228160469.9186'
   assets:
