--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -37,9 +37,9 @@ components:
 
           '}
       type: TextArea
-      layout_properties: {grid_position: 'CZFJGW,FLGHDD'}
+      layout_properties: {grid_position: 'CZFJGW,FLGHDD VUMTMM,VHSOVL'}
     - name: text2
-      properties: {spacing_above: small, height: 36, text: text2}
+      properties: {spacing_above: small, height: 36, text: E-mail}
       type: TextArea
       layout_properties: {grid_position: 'CZFJGW,FLGHDD HUUXBY,DHEBIH'}
     - name: label_3_copy
@@ -54,17 +54,17 @@ components:
       properties: {text: 'Enter you password again : '}
       type: Label
       layout_properties: {grid_position: 'EARSZD,LJXYQS YYAHLQ,QNEIOI'}
-    - name: text3
+    - name: Phone
       properties: {spacing_above: small, height: 36, text: "Phone \n"}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX RBJAEA,JPHKRZ'}
-    - name: text4
-      properties: {spacing_above: small, height: 36, visible: false, text: "Password\
+    - name: Password
+      properties: {spacing_above: small, height: 36, visible: true, text: "Password\
           \ \n"}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX UCCKWI,TFCFCJ'}
     - name: text5
-      properties: {spacing_above: small, height: 36, visible: false, text: text5}
+      properties: {spacing_above: small, height: 36, visible: true, text: Enter your password again}
       type: TextArea
       layout_properties: {grid_position: 'EARSZD,RGYTDX ZPTIZH,XDQIXI'}
     - name: link_1
