--- a/anvil.yaml
+++ b/anvil.yaml
@@ -31,7 +31,7 @@ db_schema:
     - name: Phone
       admin_ui: {width: 200, order: 3}
       type: number
-    - name: Date and Time
-      admin_ui: {width: 200, order: 5}
+    - name: Date_and_Time
+      admin_ui: {width: 200, order: 4}
       type: datetime
     title: Signup
